--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "generate-report": "phantomjs reportsServer.js templates/test.json",
     "devtools": "DEV_TOOLS=1 npm start",
     "lint": "eslint src tests",
-    "test": "echo \"Error: no test specified\"",
+    "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
+    "test-no-cover": "NODE_ENV=test ./node_modules/.bin/_mocha tests --reporter spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
+    "test:watch": "npm run test-no-cover -- -w",
     "check": "npm run lint && npm run test",
     "check-versions": "ncu"
   },
@@ -40,10 +42,14 @@
     "babel-eslint": "^6.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
+    "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
+    "enzyme": "^2.3.0",
     "eslint": "2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.10.0",
@@ -54,8 +60,12 @@
     "html-webpack-plugin": "^2.15.0",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^1.8.0",
+    "istanbul": "^0.4.4",
+    "jsdom": "^9.4.0",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.3",
+    "lodash": "^4.13.1",
+    "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
     "normalize.css": "^4.0.0",
     "postcss": "^5.0.19",
@@ -63,7 +73,6 @@
     "postcss-import": "^8.1.0",
     "postcss-loader": "^0.9.1",
     "postcss-url": "^5.1.1",
-    "react-addons-test-utils": "15.2.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
