--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "generate-report": "phantomjs reportsServer.js templates/test.json",
     "devtools": "DEV_TOOLS=1 npm start",
     "lint": "eslint src tests",
-    "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
-    "test-no-cover": "NODE_ENV=test ./node_modules/.bin/_mocha tests --reporter spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
+    "test": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
+    "test-no-cover": "NODE_ENV=test mocha tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
     "test:watch": "npm run test-no-cover -- -w",
     "check": "npm run lint && npm run test",
     "check-versions": "ncu"
@@ -60,7 +60,7 @@
     "html-webpack-plugin": "^2.15.0",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^1.8.0",
-    "istanbul": "^0.4.4",
+    "istanbul": "1.0.0 || 1.1.0-alpha.1",
     "jsdom": "^9.4.0",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.3",
