--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "mocha": "^2.5.3",
     "node-libs-browser": "^1.0.0",
     "normalize.css": "^4.0.0",
+    "npm-check-updates": "^2.6.8",
     "postcss": "^5.0.19",
     "postcss-cssnext": "^2.5.2",
     "postcss-import": "^8.1.0",
