--- a/circle.yml
+++ b/circle.yml
@@ -2,14 +2,13 @@ machine:
   node:
     version: v6.2.1
 dependencies:
-#  pre:
-#    - npm install -g npm
-#  override:
-#    - npm install
+  pre:
+    - npm install -g npm
+  override:
+    - npm install
   post:
     - npm run build
 test:
   override:
     - npm run lint
-    - npm run check-versions
     - npm run test
