--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
     "enzyme": "^2.3.0",
-    "eslint": "2.13.1",
+    "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.0",
+    "eslint-plugin-import": "^1.10.1",
     "eslint-plugin-jsx-a11y": "^1.5.3",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.15.0",
+    "html-webpack-plugin": "^2.22.0",
     "http-server": "^0.9.0",
     "image-webpack-loader": "^1.8.0",
     "istanbul": "1.0.0 || 1.1.0-alpha.1",
