--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "postcss-import": "^8.1.0",
     "postcss-loader": "^0.9.1",
     "postcss-url": "^5.1.1",
+    "react-addons-test-utils": "^15.2.0",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
