Added watch to report server

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "rm -rf dist",
     "build": "npm run clean && webpack",
     "start": "webpack-dev-server --content-base ./dist --port 8082 --no-info --colors",
-    "start-reports-server": "npm run build && http-server ./dist -p 8083",
+    "start-reports-server": "npm run clean && (webpack --progress --colors --watch & watch-http-server ./dist -p 8083)",
     "generate-report": "phantomjs reportsServer.js templates/test.json",
     "devtools": "DEV_TOOLS=1 npm start",
     "lint": "eslint src tests",
@@ -81,6 +81,7 @@
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
     "style-loader": "^0.13.1",
+    "watch-http-server": "^0.7.6",
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0",
