Added table section + tests Added the PDF format to phantomjs webpage (letter and etc.)

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "start-prod": "NODE_ENV=production webpack-dev-server --content-base ./dist --port 8082 --no-info --colors --config webpack.production.config.js",
     "start-reports-server": "npm run clean && (webpack --progress --colors --watch & watch-http-server ./dist -p 8083)",
     "start-reports-server-prod": "npm run clean && (NODE_ENV=production webpack --config webpack.production.config.js --progress --colors --watch & watch-http-server ./dist -p 8083)",
-    "generate-report": "phantomjs reportsServer.js templates/test.json",
+    "generate-report": "./node_modules/.bin/phantomjs reportsServer.js templates/test.json",
     "devtools": "DEV_TOOLS=1 npm start",
     "lint": "eslint src tests",
     "test": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
@@ -78,6 +78,7 @@
     "node-libs-browser": "^1.0.0",
     "normalize.css": "^4.0.0",
     "npm-check-updates": "^2.6.8",
+    "phantomjs-prebuilt": "^2.1.7",
     "postcss": "^5.0.19",
     "postcss-cssnext": "^2.5.2",
     "postcss-import": "^8.1.0",
