--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "copy-webpack-plugin": "^3.0.1",
     "coveralls": "^2.11.9",
     "css-loader": "^0.23.1",
     "enzyme": "^2.4.1",
@@ -93,6 +94,7 @@
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1",
-    "webpack-livereload-plugin": "^0.8.1"
+    "webpack-livereload-plugin": "^0.8.1",
+    "webpack-shell-plugin": "^0.4.2"
   }
 }
