--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "classnames": "^2.2.3",
     "jquery": "^3.1.0",
     "less": "^2.7.1",
+    "moment": "^2.14.1",
     "parse-link-header": "^0.4.1",
     "postcss-reporter": "^1.4.1",
     "react": "^15.2.1",
