--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^15.2.1",
     "react-pure-render": "^1.0.2",
     "recharts": "^0.12.4",
+    "seedrandom": "^2.4.2",
     "semantic-ui": "^2.2.2",
     "whatwg-fetch": "^1.0.0"
   },
