--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "webpack": "^1.12.14",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1",
-    "webpack-livereload-plugin": "^0.8.1"
+    "webpack-livereload-plugin": "^0.8.1",
+    "webpack-shell-plugin": "^0.4.2"
   }
 }
