--- a/package.json
+++ b/package.json
@@ -34,13 +34,25 @@
   "dependencies": {
     "babel-runtime": "^6.6.1",
     "classnames": "^2.2.3",
+    "generic-react-json-inspector": "^6.1.6",
     "jquery": "^3.1.0",
     "less": "^2.7.1",
+    "markdown-it-abbr": "1.0.4",
+    "markdown-it-container": "2.0.0",
+    "markdown-it-deflist": "2.0.1",
+    "markdown-it-emoji": "1.3.0",
+    "markdown-it-footnote": "3.0.1",
+    "markdown-it-ins": "^2.0.0",
+    "markdown-it-mark": "2.0.0",
+    "markdown-it-sub": "1.0.0",
+    "markdown-it-sup": "1.0.0",
     "moment": "^2.14.1",
     "parse-link-header": "^0.4.1",
     "postcss-reporter": "^1.4.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-highlight": "^0.9.0",
+    "react-markdown-js": "0.5.0",
     "react-pure-render": "^1.0.2",
     "recharts": "^0.12.4",
     "seedrandom": "^2.4.2",
