--- a/package.json
+++ b/package.json
@@ -109,6 +109,6 @@
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.1",
     "webpack-livereload-plugin": "^0.8.1",
-    "webpack-shell-plugin": "^0.4.2"
+    "webpack-shell-plugin": "0.4.2"
   }
 }
