--- a/package.json
+++ b/package.json
@@ -32,83 +32,83 @@
     "lint"
   ],
   "dependencies": {
-    "babel-runtime": "^6.6.1",
-    "classnames": "^2.2.3",
-    "generic-react-json-inspector": "^6.1.6",
-    "jquery": "^3.1.0",
-    "less": "^2.7.1",
+    "babel-runtime": "6.6.1",
+    "classnames": "2.2.3",
+    "generic-react-json-inspector": "6.1.6",
+    "jquery": "3.1.0",
+    "less": "2.7.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
     "markdown-it-deflist": "2.0.1",
     "markdown-it-emoji": "1.3.0",
     "markdown-it-footnote": "3.0.1",
-    "markdown-it-ins": "^2.0.0",
+    "markdown-it-ins": "2.0.0",
     "markdown-it-mark": "2.0.0",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
-    "moment": "^2.14.1",
-    "parse-link-header": "^0.4.1",
-    "postcss-reporter": "^1.4.1",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
-    "react-highlight": "^0.9.0",
+    "moment": "2.14.1",
+    "parse-link-header": "0.4.1",
+    "postcss-reporter": "1.4.1",
+    "react": "15.2.1",
+    "react-dom": "15.2.1",
+    "react-highlight": "0.9.0",
     "react-markdown-js": "0.5.0",
-    "react-pure-render": "^1.0.2",
-    "recharts": "^0.12.4",
-    "seedrandom": "^2.4.2",
-    "semantic-ui": "^2.2.2",
-    "whatwg-fetch": "^1.0.0"
+    "react-pure-render": "1.0.2",
+    "recharts": "0.12.4",
+    "seedrandom": "2.4.2",
+    "semantic-ui": "2.2.2",
+    "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.4.0",
-    "babel-core": "^6.7.6",
-    "babel-eslint": "^6.1.1",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.0.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.10.2",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
-    "eslint-plugin-react": "^5.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
-    "http-server": "^0.9.0",
-    "image-webpack-loader": "^1.8.0",
+    "assets-webpack-plugin": "3.4.0",
+    "babel-core": "6.7.6",
+    "babel-eslint": "6.1.1",
+    "babel-loader": "6.2.4",
+    "babel-plugin-react-transform": "2.0.2",
+    "babel-polyfill": "6.9.1",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "babel-preset-stage-0": "6.5.0",
+    "chai": "3.5.0",
+    "coveralls": "2.11.9",
+    "css-loader": "0.23.1",
+    "enzyme": "2.4.1",
+    "eslint": "3.0.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-plugin-import": "1.10.2",
+    "eslint-plugin-jsx-a11y": "1.5.5",
+    "eslint-plugin-react": "5.2.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
+    "html-webpack-plugin": "2.22.0",
+    "http-server": "0.9.0",
+    "image-webpack-loader": "1.8.0",
     "istanbul": "1.0.0 || 1.1.0-alpha.1",
-    "jsdom": "^9.4.1",
-    "json-loader": "^0.5.4",
-    "less-loader": "^2.2.3",
-    "lodash": "^4.13.1",
-    "mocha": "^2.5.3",
-    "mocha-lcov-reporter": "^1.2.0",
-    "node-libs-browser": "^1.0.0",
-    "normalize.css": "^4.0.0",
-    "npm-check-updates": "^2.7.0",
-    "phantomjs-prebuilt": "^2.1.7",
-    "postcss": "^5.0.19",
-    "postcss-cssnext": "^2.5.2",
-    "postcss-import": "^8.1.0",
-    "postcss-loader": "^0.9.1",
-    "postcss-url": "^5.1.1",
-    "react-addons-test-utils": "^15.2.1",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.3",
-    "style-loader": "^0.13.1",
-    "watch-http-server": "^0.7.6",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.1",
-    "webpack-livereload-plugin": "^0.8.1",
+    "jsdom": "9.4.1",
+    "json-loader": "0.5.4",
+    "less-loader": "2.2.3",
+    "lodash": "4.13.1",
+    "mocha": "2.5.3",
+    "mocha-lcov-reporter": "1.2.0",
+    "node-libs-browser": "1.0.0",
+    "normalize.css": "4.0.0",
+    "npm-check-updates": "2.7.0",
+    "phantomjs-prebuilt": "2.1.7",
+    "postcss": "5.0.19",
+    "postcss-cssnext": "2.5.2",
+    "postcss-import": "8.1.0",
+    "postcss-loader": "0.9.1",
+    "postcss-url": "5.1.1",
+    "react-addons-test-utils": "15.2.1",
+    "react-transform-catch-errors": "1.0.2",
+    "react-transform-hmr": "1.0.4",
+    "redbox-react": "1.2.3",
+    "style-loader": "0.13.1",
+    "watch-http-server": "0.7.6",
+    "webpack": "1.12.14",
+    "webpack-dev-middleware": "1.6.1",
+    "webpack-hot-middleware": "2.12.1",
+    "webpack-livereload-plugin": "0.8.1",
     "webpack-shell-plugin": "0.4.2"
   }
 }
