--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && webpack",
-    "production": "NODE_ENV=production npm run build -- --config webpack.production.config.js --progress",
-    "start": "webpack-dev-server --content-base ./dist --port 8082 --no-info --colors",
+    "production": "NODE_ENV=production npm run build -- --progress --env.production",
+    "start": "./node_modules/.bin/webpack-dev-server --content-base ./dist --port 8082 --no-info --colors",
     "start-prod": "NODE_ENV=production webpack-dev-server --content-base ./dist --port 8082 --no-info --colors --config webpack.production.config.js",
     "generate-report": "./node_modules/.bin/phantomjs reportsServer.js templates/test.json",
     "devtools": "DEV_TOOLS=1 npm start",
@@ -32,11 +32,11 @@
     "lint"
   ],
   "dependencies": {
-    "babel-runtime": "6.6.1",
-    "classnames": "2.2.3",
-    "generic-react-json-inspector": "6.1.6",
-    "jquery": "3.1.0",
-    "less": "2.7.1",
+    "babel-runtime": "6.25.0",
+    "classnames": "2.2.5",
+    "generic-react-json-inspector": "6.1.8",
+    "jquery": "3.2.1",
+    "less": "2.7.2",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
     "markdown-it-deflist": "2.0.1",
@@ -46,69 +46,70 @@
     "markdown-it-mark": "2.0.0",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
-    "moment": "2.14.1",
+    "moment": "2.18.1",
     "parse-link-header": "0.4.1",
     "postcss-reporter": "1.4.1",
-    "react": "15.2.1",
-    "react-dom": "15.2.1",
-    "react-highlight": "0.9.0",
+    "react": "15.6.1",
+    "react-dom": "15.6.1",
+    "react-highlight": "0.10.0",
     "react-markdown-js": "0.5.0",
     "react-pure-render": "1.0.2",
     "recharts": "0.12.4",
-    "seedrandom": "2.4.2",
-    "semantic-ui": "2.2.2",
+    "seedrandom": "2.4.3",
+    "semantic-ui": "2.2.11",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "3.4.0",
-    "babel-core": "6.7.6",
+    "assets-webpack-plugin": "3.5.1",
+    "babel-core": "6.25.0",
     "babel-eslint": "6.1.1",
-    "babel-loader": "6.2.4",
+    "babel-loader": "7.1.1",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-polyfill": "6.9.1",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-stage-0": "6.5.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "6.24.1",
     "chai": "3.5.0",
     "coveralls": "2.11.9",
-    "css-loader": "0.23.1",
+    "css-loader": "0.28.4",
     "enzyme": "2.4.1",
     "eslint": "3.0.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.10.2",
     "eslint-plugin-jsx-a11y": "1.5.5",
     "eslint-plugin-react": "5.2.2",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.9.0",
-    "html-webpack-plugin": "2.22.0",
-    "http-server": "0.9.0",
-    "image-webpack-loader": "1.8.0",
+    "extract-text-webpack-plugin": "3.0.0",
+    "file-loader": "0.11.2",
+    "html-webpack-plugin": "2.29.0",
+    "http-server": "0.10.0",
+    "image-webpack-loader": "3.3.1",
     "istanbul": "1.0.0 || 1.1.0-alpha.1",
     "jsdom": "9.4.1",
-    "json-loader": "0.5.4",
-    "less-loader": "2.2.3",
-    "lodash": "4.13.1",
+    "json-loader": "0.5.7",
+    "less-loader": "4.0.5",
+    "lodash": "4.17.4",
     "mocha": "2.5.3",
     "mocha-lcov-reporter": "1.2.0",
-    "node-libs-browser": "1.0.0",
-    "normalize.css": "4.0.0",
-    "npm-check-updates": "2.7.0",
-    "phantomjs-prebuilt": "2.1.7",
-    "postcss": "5.0.19",
-    "postcss-cssnext": "2.5.2",
-    "postcss-import": "8.1.0",
-    "postcss-loader": "0.9.1",
-    "postcss-url": "5.1.1",
-    "react-addons-test-utils": "15.2.1",
+    "node-libs-browser": "2.0.0",
+    "normalize.css": "7.0.0",
+    "npm-check-updates": "2.12.1",
+    "phantomjs-prebuilt": "2.1.14",
+    "postcss": "6.0.8",
+    "postcss-cssnext": "3.0.2",
+    "postcss-import": "10.0.0",
+    "postcss-loader": "2.0.6",
+    "postcss-url": "7.1.1",
+    "react-addons-test-utils": "15.6.0",
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
-    "redbox-react": "1.2.3",
-    "style-loader": "0.13.1",
+    "redbox-react": "1.4.3",
+    "style-loader": "0.18.2",
     "watch-http-server": "0.7.6",
-    "webpack": "1.12.14",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.12.1",
-    "webpack-livereload-plugin": "0.8.1",
-    "webpack-shell-plugin": "0.4.2"
+    "webpack": "3.4.1",
+    "webpack-dev-middleware": "1.11.0",
+    "webpack-dev-server": "^2.6.1",
+    "webpack-hot-middleware": "2.18.2",
+    "webpack-livereload-plugin": "0.11.0",
+    "webpack-shell-plugin": "0.5.0"
   }
 }
