--- a/circle.yml
+++ b/circle.yml
@@ -15,3 +15,21 @@ test:
   post:
       - tar -cvf sane-report.tar dist reportsServer.js
       - cp sane-report.tar $CIRCLE_ARTIFACTS/sane-report.tar
+deployment:
+  release:
+    tag: /release-.*/
+    commands:
+      - npm install
+      - npm run lint
+      - npm run coverage
+      - npm run production
+      - mkdir sane-reports
+      - cp -avR dist sane-reports
+      - cp package.json sane-reports
+      - cp LICENSE sane-reports
+      - cp README.md sane-reports
+      - cp reportsServer.js sane-reports
+      - cd sane-reports
+      - npm pack
+      - echo -e "$NPM_USERNAME\n$NPM_PASSWORD\n$NPM_EMAIL" | npm login
+      - npm publish sane-reports-*.tgz
