--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sane-reports",
   "version": "0.0.1",
-  "description": "sane-report is a library that helps you to generate headless reports according to simple language.",
+  "description": "Reports library that will keep you sane and not pulling your hair out. sane-report is a library that helps you to generate headless reports according to simple language.",
   "homepage": "https://www.demisto.com",
   "author": "Demisto (Doron Sharon)",
   "repository": {
