--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-highlight": "0.10.0",
     "react-markdown-js": "0.5.0",
     "react-pure-render": "1.0.2",
-    "recharts": "0.12.4",
+    "recharts": "1.0.0-beta.5",
     "seedrandom": "2.4.3",
     "semantic-ui": "2.2.11",
     "whatwg-fetch": "1.0.0"
