--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "postcss-reporter": "1.4.1",
     "react": "15.6.1",
     "react-dom": "15.6.1",
-    "react-grid-layout": "^0.16.2",
+    "react-grid-layout": "0.16.2",
     "react-highlight": "0.10.0",
     "react-markdown-js": "0.5.0",
     "react-pure-render": "1.0.2",
