--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "production": "NODE_ENV=production npm run build -- --progress --env.production",
     "start": "./node_modules/.bin/webpack-dev-server --content-base ./dist --port 8082 --no-info --colors",
     "start-prod": "NODE_ENV=production webpack-dev-server --content-base ./dist --port 8082 --no-info --colors --config webpack.production.config.js",
-    "generate-report": "./node_modules/.bin/phantomjs reportsServer.js templates/test.json",
+    "generate-report": "./reportsServer-macos templates/test.json",
     "devtools": "DEV_TOOLS=1 npm start",
     "lint": "eslint src tests",
     "test": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
@@ -63,6 +63,8 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
+    "@moonandyou/chrome-path": "0.2.1",
+    "puppeteer": "1.2.0",
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.25.0",
     "babel-eslint": "6.1.1",
@@ -96,7 +98,6 @@
     "node-libs-browser": "2.0.0",
     "normalize.css": "7.0.0",
     "npm-check-updates": "2.12.1",
-    "phantomjs-prebuilt": "2.1.14",
     "postcss": "6.0.8",
     "postcss-cssnext": "3.0.2",
     "postcss-import": "10.0.0",
