--- a/circle.yml
+++ b/circle.yml
@@ -27,7 +27,7 @@ deployment:
       - cp LICENSE sane-reports
       - cp README.md sane-reports
       - cp reportsServer.js sane-reports
-      - npm i pkg -g
+      - npm install pkg -g
       - pkg -t mac,linux reportsServer.js
       - cd sane-reports
       - npm set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
