--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,10 @@ jobs:
   build:
     docker:
       - image: circleci/node:9.11
+    resource_class: large
+    working_directory: ~/work
     environment:
-      CIRCLE_ARTIFACTS: "~"
+      CIRCLE_ARTIFACTS: "~/work/artifacts"
     steps:
       - checkout
       - restore_cache:
@@ -12,8 +14,10 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+              sudo mkdir -p -m 777 $CIRCLE_ARTIFACTS
               sudo npm install -g npm
               sudo npm install
+          no_output_timeout: 3600
       - save_cache:
           key: npm-sane-reports-{{ checksum "package.json" }}
           paths:
