--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ jobs:
     docker:
       - image: circleci/node:8.11.0
     resource_class: large
+    working_directory: ~/sane-reports
     steps:
       - checkout
       - restore_cache:
@@ -11,7 +12,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-              sudo npm install npm@4 -g
+              sudo npm install npm@5 -g
               sudo npm install
       - save_cache:
           key: npm-sane-reports-{{ checksum "package.json" }}
