--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,13 +35,17 @@ jobs:
       - run:
           name: Deploy
           command: |
-              mkdir sane-reports
-              cp -avR dist sane-reports
-              cp -avR templates sane-reports
-              cp package.json sane-reports
-              cp LICENSE sane-reports
-              cp README.md sane-reports
-              cp reportsServer.js sane-reports
-              cd sane-reports
-              sudo npm set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
-              sudo npm publish sane-reports
+              CIRCLE_TAG="$(git tag -l --points-at HEAD)" && if [[ $CIRCLE_TAG =~ /release-.*/ ]]; then
+                mkdir sane-reports
+                cp -avR dist sane-reports
+                cp -avR templates sane-reports
+                cp package.json sane-reports
+                cp LICENSE sane-reports
+                cp README.md sane-reports
+                cp reportsServer.js sane-reports
+                cd sane-reports
+                sudo npm set //registry.npmjs.org/:_authToken=${NPM_TOKEN}
+                sudo npm publish sane-reports
+              else
+                echo 'Nothing to do.'
+              fi
