--- a/package.json
+++ b/package.json
@@ -64,8 +64,6 @@
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
-    "@moonandyou/chrome-path": "0.2.1",
-    "puppeteer": "1.2.0",
     "assets-webpack-plugin": "3.5.1",
     "babel-core": "6.25.0",
     "babel-eslint": "6.1.1",
@@ -99,6 +97,7 @@
     "node-libs-browser": "2.0.0",
     "normalize.css": "7.0.0",
     "npm-check-updates": "2.12.1",
+    "phantomjs-prebuilt": "2.1.14",
     "postcss": "6.0.8",
     "postcss-cssnext": "3.0.2",
     "postcss-import": "10.0.0",
