--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,6 +37,7 @@ jobs:
       - run:
           name: Deploy
           command: |
+              echo CircleCI tag is: $CIRCLE_TAG
               CIRCLE_TAG="$(git tag -l --points-at HEAD)" && if [[ $CIRCLE_TAG =~ /release-.*/ ]]; then
                 mkdir sane-reports
                 cp -avR dist sane-reports
