--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,3 +52,15 @@ jobs:
               else
                 echo 'Nothing to do.'
               fi
+
+workflows:
+  version: 2
+  untagged-build:
+    jobs:
+      - build
+  tagged-build:
+    jobs:
+      - build
+        filters:
+          tags:
+            only: /release-.*/
