--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,17 @@ jobs:
     working_directory: ~/sane-reports
     steps:
       - checkout
+      - restore_cache:
+          key: npm-sane-reports-{{ checksum "package.json" }}
       - run:
           name: Install dependencies
           command: |
               sudo npm install npm@latest -g
               npm install
+      - save_cache:
+          key: npm-sane-reports-{{ checksum "package.json" }}
+          paths:
+            - node_modules
       - run:
           name: Build
           command: npm run production
@@ -49,9 +55,6 @@ jobs:
 
 workflows:
   version: 2
-  untagged-build:
-    jobs:
-      - build
   tagged-build:
     jobs:
       - build:
