--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,10 +29,18 @@ jobs:
       - run:
           name: Create Artifact
           command:  |
-              cd reportService && npm install && npm run build-mac && cd ..
+              cd reportService && npm install && npm run build && cd ..
               tar -cvf sane-report.tar dist reportsServer.js reportsServer
       - store_artifacts:
           path: sane-report.tar
+          destination: sane-report
+      - run:
+          name: Create Artifact Mac
+          command:  |
+            cd reportService && npm install && npm run build-mac && cd ..
+            tar -cvf sane-report.tar dist reportsServer.js reportsServer
+      - store_artifacts:
+          path: sane-report-mac.tar
           destination: sane-report
       - run:
           name: Deploy
