--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,14 @@ jobs:
           path: sane-report.tar
           destination: sane-report
       - run:
+          name: Create Artifact Mac
+          command:  |
+            cd reportService && npm install && npm run build-mac && cd ..
+            tar -cvf sane-report-mac.tar dist reportsServer.js reportsServer
+      - store_artifacts:
+          path: sane-report-mac.tar
+          destination: sane-report-mac
+      - run:
           name: Deploy
           command: |
               echo CircleCI tag is: $CIRCLE_TAG
