--- a/package.json
+++ b/package.json
@@ -110,8 +110,9 @@
     "style-loader": "0.18.2",
     "watch-http-server": "0.7.6",
     "webpack": "3.4.1",
+    "webpack-cli": "3.2.1",
     "webpack-dev-middleware": "1.11.0",
-    "webpack-dev-server": "3.1.14",
+    "webpack-dev-server": "2.9.7",
     "webpack-hot-middleware": "2.18.2",
     "webpack-livereload-plugin": "0.11.0",
     "webpack-shell-plugin": "0.5.0"
