--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "react-transform-catch-errors": "1.0.2",
     "react-transform-hmr": "1.0.4",
     "redbox-react": "1.4.3",
+    "string-replace-loader": "2.1.1",
     "style-loader": "0.18.2",
     "watch-http-server": "0.7.6",
     "webpack": "3.4.1",
@@ -114,7 +115,6 @@
     "webpack-dev-middleware": "1.11.0",
     "webpack-dev-server": "3.1.14",
     "webpack-hot-middleware": "2.18.2",
-    "webpack-livereload-plugin": "0.11.0",
-    "webpack-shell-plugin": "0.5.0"
+    "webpack-livereload-plugin": "0.11.0"
   }
 }
