--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
   "env": {
     "development": {
       "plugins": [
