--- a/reportService/package.json
+++ b/reportService/package.json
@@ -30,13 +30,14 @@
     "pkg": "4.3.7",
     "@moonandyou/chrome-path": "0.2.1",
     "puppeteer": "1.2.0",
-    "babel-core": "6.25.0",
+    "@babel/core": "7.1.2",
+    "@babel/preset-env": "7.1.0",
+    "@babel/preset-react": "7.0.0",
+    "@babel/register": "7.0.0",
+    "@babel/runtime": "7.1.2",
     "babel-eslint": "6.1.1",
     "babel-loader": "7.1.1",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "6.24.1"
+    "babel-polyfill": "6.23.0"
   }
 }
