--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     "coveralls": "3.0.2",
     "css-loader": "1.0.0",
     "enzyme": "3.9.0",
-    "enzyme-adapter-react-16": "1.11.2",
+    "enzyme-adapter-react-15": "1.4.0",
+    "react-test-renderer": "15.5.3",
     "eslint": "3.0.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.10.2",
