--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "babel-runtime": "6.25.0",
     "classnames": "2.2.5",
+    "create-react-class": "15.6.3",
     "jquery": "3.4.0",
     "less": "2.7.2",
     "markdown-it-abbr": "1.0.4",
@@ -54,7 +55,7 @@
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-grid-layout": "0.16.2",
-    "react-highlight": "0.10.0",
+    "react-highlight": "briancappello/react-highlight#react-v16-compiled",
     "react-json-inspector-demisto": "1.0.2",
     "react-markdown-demisto": "1.0.1",
     "react-pure-render": "1.0.2",
