--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "dependencies": {
     "babel-runtime": "6.25.0",
     "classnames": "2.2.5",
+    "core-js": "3.1.4",
+    "create-react-class": "15.6.3",
     "jquery": "3.4.0",
     "less": "2.7.2",
     "markdown-it-abbr": "1.0.4",
