Fix bad packages

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,28 @@
     "arrow-body-style": 0,
     "react/prefer-stateless-function": 0,
     "react/prefer-es6-class": 0,
+    "react/jsx-filename-extension": 0,
+    "object-curly-newline": 0,
+    "import/order": 0,
+    "operator-linebreak": 0,
+    "import/prefer-default-export": 0,
+    "prefer-destructuring": 0,
+    "no-restricted-globals": 0,
+    "no-bitwise": 0,
+    "no-plusplus": 0,
+    "import/first": 0,
+    "react/require-default-props": 0,
+    "import/newline-after-import": 0,
+    "react/forbid-prop-types": 0,
+    "implicit-arrow-linebreak": 0,
+    "react/jsx-wrap-multilines": 0,
+    "react/jsx-max-props-per-line": 0,
+    "function-paren-newline": 0,
+    "react/jsx-one-expression-per-line": 0,
+    "react/no-array-index-key": 0,
+    "import/extensions": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0,
     "react/jsx-no-bind": [2,
       {
         "ignoreRefs": true,
