--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "recharts": "1.0.0-beta.5",
     "seedrandom": "2.4.3",
     "semantic-ui": "2.2.11",
+    "uuid": "3.3.2",
     "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
