--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-grid-layout": "0.16.2",
-    "react-highlight": "0.10.0",
+    "react-highlight": "briancappello/react-highlight#react-v16-compiled",
     "react-json-inspector-demisto": "1.0.2",
     "react-markdown-demisto": "1.0.1",
     "react-pure-render": "1.0.2",
