--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "make": "cd reportService && npm install && npm run build",
     "test": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
     "test-no-cover": "NODE_ENV=test mocha tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
-    "coverage": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- tests --require @babel/register --require null-compiler.js --ignore node_modules,vendors --require ./tests/helpers/helper.js --recursive --check-leaks --timeout 60000 && cat ./coverage/lcov.info | COVERALLS_SERVICE_NAME=circle-ci COVERALLS_REPO_TOKEN=BpaCDz1aFLckIylCx4YIG6uiu1xXU0r66 ./node_modules/coveralls/bin/coveralls.js",
+    "coverage": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- tests --require @babel/register --require null-compiler.js --ignore node_modules,vendors --require ./tests/helpers/helper.js --recursive --check-leaks --timeout 60000",
     "test:watch": "npm run test-no-cover -- -w",
     "check": "npm run lint && npm run test"
   },
