--- a/.babelrc
+++ b/.babelrc
@@ -3,26 +3,7 @@
   "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "development": {
-      "plugins": [
-        [
-          "react-transform", {
-          "transforms": [
-            {
-              "transform": "react-transform-hmr",
-              "imports": ["react"],
-              "locals": ["module"]
-            },
-            {
-              "transform": "react-transform-catch-errors",
-              "imports": [
-                "react",
-                "redbox-react"
-              ]
-            }
-          ]
-        }
-        ]
-      ]
+      "plugins": [ ]
     },
     "production": {
       "plugins": [
