--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,26 @@
   "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "development": {
-      "plugins": [ ]
+      "plugins": [
+        [
+          "react-transform", {
+          "transforms": [
+            {
+              "transform": "react-transform-hmr",
+              "imports": ["react"],
+              "locals": ["module"]
+            },
+            {
+              "transform": "react-transform-catch-errors",
+              "imports": [
+                "react",
+                "redbox-react"
+              ]
+            }
+          ]
+        }
+        ]
+      ]
     },
     "production": {
       "plugins": [
