--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "classnames": "2.2.5",
     "core-js": "3.1.4",
     "create-react-class": "15.6.3",
+    "gulp": "^3.9.1",
     "jquery": "3.5.0",
     "less": "2.7.2",
     "lodash": "4.17.19",
