--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,10 @@ jobs:
       - checkout
       - restore_cache:
           key: npm-sane-reports-{{ checksum "package.json" }}
+      - run:
+          name: Install dependencies
+          command: |
+              npm install
       - save_cache:
           key: npm-sane-reports-{{ checksum "package.json" }}
           paths:
