--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,10 @@ jobs:
     steps:
       - checkout
       - run:
+            name: Echo npm
+            command: |
+              node --version
+      - run:
           name: Install dependencies
           command: |
               npm install
