--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jquery": "3.5.0",
     "less": "2.7.2",
     "lodash": "4.17.19",
+    "gulp": "3.9.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
     "markdown-it-deflist": "2.0.1",
