--- a/reportService/package.json
+++ b/reportService/package.json
@@ -27,17 +27,17 @@
     ]
   },
   "devDependencies": {
+    "pkg": "4.4.9",
+    "@moonandyou/chrome-path": "0.2.1",
+    "puppeteer": "5.3.1",
     "@babel/core": "7.1.2",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "@babel/runtime": "7.1.2",
-    "@moonandyou/chrome-path": "0.2.1",
     "babel-eslint": "6.1.1",
     "babel-loader": "7.1.1",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-polyfill": "6.23.0",
-    "pkg": "4.4.9",
-    "puppeteer": "8.0.0"
+    "babel-polyfill": "6.23.0"
   }
 }
