support durations formatting

--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "classnames": "2.2.5",
     "core-js": "3.1.4",
     "create-react-class": "15.6.3",
+    "gulp": "3.9.1",
     "jquery": "3.5.0",
     "less": "2.7.2",
     "lodash": "4.17.19",
-    "gulp": "3.9.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
     "markdown-it-deflist": "2.0.1",
@@ -50,6 +50,7 @@
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "moment": "2.21.0",
+    "moment-duration-format": "2.3.2",
     "moment-timezone": "0.5.14",
     "parse-link-header": "0.4.1",
     "postcss-reporter": "1.4.1",
