--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "gulp": "3.9.1",
     "jquery": "3.5.0",
     "less": "2.7.2",
-    "lodash": "^4.17.21",
+    "lodash": "4.17.21",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
     "markdown-it-deflist": "2.0.1",
@@ -58,7 +58,7 @@
     "react": "16.8.5",
     "react-dom": "16.8.5",
     "react-grid-layout": "0.16.2",
-    "react-highlight": "^0.14.0",
+    "react-highlight": "0.14.0",
     "react-json-inspector-demisto": "1.0.2",
     "react-markdown-demisto": "1.0.1",
     "react-pure-render": "1.0.2",
