CRTX-93854: PDF reports don't render evidence section properly

--- a/package.json
+++ b/package.json
@@ -41,13 +41,14 @@
     "jquery": "3.5.0",
     "less": "2.7.2",
     "lodash": "4.17.21",
+    "markdown-it": "13.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
-    "markdown-it-deflist": "2.0.1",
-    "markdown-it-emoji": "1.3.0",
-    "markdown-it-footnote": "3.0.1",
-    "markdown-it-ins": "2.0.0",
-    "markdown-it-mark": "2.0.0",
+    "markdown-it-deflist": "2.0.3",
+    "markdown-it-emoji": "1.4.0",
+    "markdown-it-footnote": "3.0.2",
+    "markdown-it-ins": "3.0.0",
+    "markdown-it-mark": "3.0.0",
     "markdown-it-sub": "1.0.0",
     "markdown-it-sup": "1.0.0",
     "moment": "2.21.0",
@@ -61,7 +62,6 @@
     "react-grid-layout": "0.16.2",
     "react-highlight": "0.14.0",
     "react-json-inspector-demisto": "1.0.2",
-    "react-markdown-demisto": "1.0.1",
     "react-pure-render": "1.0.2",
     "react-virtualized": "9.16.1",
     "recharts": "1.0.0-beta.5",
