Use react-markdown-demisto

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "eslint src tests",
     "make": "cd reportService && npm install && npm run build",
     "test": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha -- tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
-    "test-no-cover": "NODE_ENV=test mocha tests -R spec --compilers js:babel-core/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
+    "test-no-cover": "NODE_ENV=test mocha tests -R spec --compilers js:@babel/register,css:null-compiler.js --require ./tests/helpers/helper.js --recursive --check-leaks",
     "coverage": "NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- tests --require @babel/register --require null-compiler.js --ignore node_modules,vendors --require ./tests/helpers/helper.js --recursive --timeout 60000",
     "test:watch": "npm run test-no-cover -- -w",
     "check": "npm run lint && npm run test",
@@ -41,7 +41,6 @@
     "jquery": "3.5.0",
     "less": "2.7.2",
     "lodash": "4.17.21",
-    "markdown-it": "13.0.1",
     "markdown-it-abbr": "1.0.4",
     "markdown-it-container": "2.0.0",
     "markdown-it-deflist": "2.0.3",
@@ -62,6 +61,7 @@
     "react-grid-layout": "0.16.2",
     "react-highlight": "0.14.0",
     "react-json-inspector-demisto": "1.0.2",
+    "react-markdown-demisto": "1.0.4",
     "react-pure-render": "1.0.2",
     "react-virtualized": "9.16.1",
     "recharts": "1.0.0-beta.5",
